Make refactors using FindBug.